--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-get-random-values": "^1.9.0",
     "react-native-mmkv": "^2.8.0",
     "react-native-randombytes": "^3.6.1",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
