--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-crypto": "^2.2.0",
+    "react-native-device-info": "^10.6.0",
     "react-native-get-random-values": "^1.9.0",
     "react-native-mmkv": "^2.8.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.6.3",
-    "react-native-svg": "^13.9.0"
+    "react-native-svg": "^13.9.0",
+    "react-native-webview": "^13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
